[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutilz"
version = "1.0.0"
description = "Modular utilities for dataframes, databases, web scraping, cloud storage, system introspection, parallelism, and a unified async LLM-provider interface (Anthropic, OpenAI, Gemini, and more) — few hard dependencies, install only what you need beyond the core"
authors = [{name = "Anatoly Alexeev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "utilities", "pandas", "polars", "numpy", "numba", "data-science", "dataframe",
    "database", "web-scraping", "cloud-storage", "s3", "gcs",
    "llm", "anthropic", "openai", "gemini", "async",
    "gpu", "cuda", "cupy", "parallelism", "system-monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # core/pythonlib.py -- imported by nearly every other subpackage (filemaker, data/*,
    # database/db, dev/logginglib, text/strings, system/*, performance/kernel_tuning/cache) --
    # unconditionally imports numba (njit-decorated helper), joblib (default constructor args
    # on ObjectsDumper/ObjectsLoader, evaluated at import time), and portalocker (open_safe_shelve).
    # Found 2026-07-21 audit: these were undeclared, breaking a bare `pip install pyutilz` and
    # several extras groups (`[polars]`, `[database]`, `[nlp]`) that transitively hit pythonlib.py
    # without installing `[system]`. None of the three is guarded by try/except like the module's
    # other optional imports (catboost, IPython, nvidia) -- promoting them to real core deps is
    # the honest fix (the alternative, a lazy-import refactor of the library's most widely-shared
    # helper module, has a much larger blast radius for three lightweight, pure-pip-installable
    # packages with no heavy system/CUDA prerequisites of their own).
    "numba>=0.56",
    # numba itself hard-requires numpy at its own import time (not lazily) -- found 2026-07-21
    # audit follow-up: masking numpy alone (leaving numba unmasked, since numba is core) still
    # broke `import pyutilz.core.pythonlib`, because `from numba import njit` transitively fails
    # without numpy. Declaring it directly here (rather than leaving it "core in practice, but
    # only via an undeclared transitive pull through numba") matches this project's own stated
    # preference elsewhere for explicit declaration over relying on transitive luck.
    "numpy>=1.20",
    "joblib>=1.2",
    "portalocker>=2.0",
    # pyutilz.system.system (the subpackage core/serialization.py's `ensure_dir_exists()` and
    # data/polarslib.py's `clean_ram()` both reach into) eagerly imports ALL SIX of its own
    # submodules in its __init__.py (_common, probing, memory, fsutils, misc, sysinfo) --
    # EVERY one of them unconditionally imports psutil at module level, found 2026-07-21 audit.
    # Since that eager-import-everything design means psutil is needed just to import the
    # subpackage AT ALL regardless of which single function a caller wants, and psutil is a
    # small, universally-wheel-available package with no heavy/compiled dependency chain of its
    # own (unlike scipy/Pillow), declaring it core (rather than refactoring six submodules'
    # worth of eager imports into a lazy, per-symbol-aware __getattr__) is the honest fix.
    "psutil>=5.9",
    # system/config.py unconditionally imports tomllib (stdlib only since Python 3.11, PEP 680)
    # with no guard -- found 2026-07-21 audit: broke the declared Python 3.8/3.9/3.10 support
    # floor outright, on every extras combination, not just a packaging gap. `tomli` is the
    # widely-used backport; only installed pre-3.11, where the code now falls back to it.
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
# Data science packages
pandas = [
    "pandas>=1.5",
    # numpy moved to core [project.dependencies] (transitively required by numba, itself core).
    "pyarrow>=10.0",
    # data/pandaslib/_common.py (the shared-imports hub every pandaslib submodule pulls in)
    # unconditionally imports polars too, purely to re-export it for sibling submodules --
    # found 2026-07-21 audit: `pip install pyutilz[pandas]` alone could not import
    # `pyutilz.data.pandaslib`. Declaring it here (rather than a lazy-import refactor of the
    # hub) matches how this project already resolves this bug class elsewhere in this file.
    "polars>=0.19",
    # pandas itself hard-requires python-dateutil at import time (its own real pip dependency) --
    # declared explicitly rather than relying on that transitive pull, matching the project's
    # existing convention for pandas' other hard transitive deps (see numpy's note above).
    "python-dateutil>=2.8",
    # data/pandaslib/_common.py also does `from pyutilz.system.system import tqdmu,
    # ensure_dir_exists` -- and pyutilz.system.system's own __init__.py eagerly imports ALL SIX
    # of its submodules (not just fsutils/misc, whichever one actually defines these two names),
    # so importing pyutilz.system.system AT ALL (for any single symbol) unconditionally needs
    # every one of its submodules' own hard deps, including misc.py's tqdm+pympler. A full lazy,
    # per-symbol-aware refactor of that package's __init__.py is out of scope for this fix;
    # declaring the transitive requirement here (same "declare over invasive refactor" choice
    # made throughout this dependency cleanup) is the proportionate fix.
    "tqdm>=4.65",
    "pympler>=1.0",
]
polars = [
    # Bumped from the stale 0.18.0 floor (2026-07-21 audit): data/polarslib.py uses
    # `polars.selectors` and the `.group_by()`/`.group_by_dynamic()` methods. Confirmed via
    # Polars' own upgrade guide that `groupby` was renamed/deprecated in favor of `group_by`
    # starting in the 0.19.0 release (https://docs.pola.rs/releases/upgrade/0.19/) -- 0.18.0
    # predates that rename and would raise AttributeError on `.group_by`. The `polars.selectors`
    # submodule likewise postdates 0.18; no network access to pin its exact introducing patch
    # version, so the floor is set to the confirmed 0.19.0 minor rather than guessing a patch.
    "polars>=0.19",
    # numpy moved to core [project.dependencies] (transitively required by numba, itself core) --
    # data/polarslib.py unconditionally imports numpy too; modern polars treats numpy as an
    # optional extra of its own, so this would otherwise have been an undeclared dependency
    # of this extras group specifically.
    #
    # data/polarslib.py also does `from pyutilz.system.system import clean_ram`, which -- for
    # the same "eager-imports-all-six-submodules" reason documented on the "pandas" extras
    # group above -- transitively needs misc.py's tqdm+pympler AND memory.py's own pandas
    # (+ pandas' own dateutil requirement), not just psutil (now core).
    "tqdm>=4.65",
    "pympler>=1.0",
    "pandas>=1.5",
    "python-dateutil>=2.8",
]

# Combined dataframe stack (self-referential to avoid duplication/drift).
# pandas/polars stay as individual extras too for callers who only need one.
dataframes = [
    "pyutilz[pandas,polars]",
]

# Database packages
database = [
    "sqlalchemy>=1.4",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    # database/db/__init__.py imports dateutil.relativedelta unconditionally at module level
    # (database/__init__.py itself is a 4-line re-export shim with no imports of its own --
    # the actual unconditional import lives one directory deeper, in the db/ subpackage);
    # redislib.py imports redis unconditionally at module level. Neither is guarded by
    # try/except (unlike e.g. orjson elsewhere), so they're real requirements of this
    # extra, not correctly-optional add-ons.
    "python-dateutil>=2.8",
    "redis>=4.0",
    # database/db/__init__.py also unconditionally imports pandas (pd.read_sql calls) -- found
    # 2026-07-21 audit, same undeclared-import class as dateutil/redis above.
    "pandas>=1.5",
]

# Web scraping packages
web = [
    "selenium>=4.0",
    "undetected-chromedriver>=3.0",
    "requests>=2.28",
    "grequests>=0.7",
    "fake-useragent>=1.0",
    "curl-cffi>=0.7",
]

# Cloud storage packages
cloud = [
    "google-cloud-storage>=2.0",
    "boto3>=1.26"
]

# dev/dashlib.py imports flask/dash/dash_bootstrap_components unconditionally at module
# level (unlike flask_login a few lines down in the same file, which is try/except-guarded)
# -- a real, currently-undeclared requirement for anyone importing this niche notebook-
# dashboard helper module.
dash = [
    "flask>=2.0",
    "dash>=2.0",
    "dash-bootstrap-components>=1.0",
]

# system/scheduling/prefect.py imports prefect unconditionally at module level.
prefect = [
    "prefect>=2.0",
]

# system/parallel.py's set_tf_gpu() imports tensorflow.
tensorflow = [
    "tensorflow>=2.0",
]

# NLP packages
nlp = [
    "spacy>=3.0",
    "nltk>=3.8",
    "jellyfish>=0.9",
    "tiktoken>=0.5",
    # text/strings/webtext.py lazily imports these three (function-local, on first call --
    # corrected 2026-07-21 audit, this comment previously and incorrectly said "unconditionally
    # ... at module level", which the actual code does not do: each is guarded by a
    # `global X; if X is None: import Y` cache pattern, same shape as this file's own `nlp`
    # spaCy-model lazy-load). Being lazy doesn't make them optional, though: there is no
    # try/except fallback (unlike orjson elsewhere in the codebase) -- calling
    # get_ascii_emojies/get_unicode_emojies/suffixize without the package installed raises
    # ModuleNotFoundError at call time -- so they must still be real declared dependencies of
    # this extra rather than relying on some other extra's transitive pull. deptry DEP003
    # flagged all three as used-but-undeclared regardless of the eager-vs-lazy distinction.
    "beautifulsoup4>=4.0",
    "inflect>=6.0",
    "emoji-data-python>=1.6",
    # text/strings/__init__.py, webtext.py, basics.py, and textentropy.py all unconditionally
    # import pandas (numpy moved to core [project.dependencies], transitively required by numba)
    # -- found 2026-07-21 audit: no dedicated "text"/"strings" extras group exists, and this is
    # the closest-matching domain extra for the text/strings subpackage. python-dateutil is
    # pandas' own hard transitive dependency, declared explicitly for the same reason noted on
    # the "pandas" extras group above.
    "pandas>=1.5",
    "python-dateutil>=2.8",
]

# LLM providers
llm = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx>=0.25",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tiktoken>=0.5",
]

# System utilities
system = [
    "tqdm>=4.65",
    "pympler>=1.0",
    # numba, joblib, portalocker, psutil moved to the core [project.dependencies] list above --
    # required unconditionally by core/pythonlib.py / pyutilz.system.system, not specific to
    # this "system" domain.
    # system/parallel.py (applyfunc_parallel's return_dataframe=True default path) and
    # system/system/memory.py both unconditionally import pandas -- found 2026-07-21 audit.
    # python-dateutil is pandas' own hard transitive dependency, declared explicitly for the
    # same reason noted on the "pandas" extras group above (numpy itself is core, see above).
    "pandas>=1.5",
    "python-dateutil>=2.8",
    # core/image.py and core/matrix.py import Pillow/scipy unconditionally at module level;
    # neither maps to an existing domain extra, so they'd otherwise be genuinely undeclared
    # requirements for anyone importing those two core submodules directly.
    "Pillow>=9.0",
    "scipy>=1.9",
    # Hardware detection (migrated from ml_perf_test)
    "py-cpuinfo>=9.0",
    "GPUtil>=1.4",
    "xmltodict>=0.13",
    # text/similarity.py unconditionally imports jellyfish at module level (found by
    # code_audit's undeclared_import scanner, 2026-07-21 audit follow-up); jellyfish is
    # otherwise only declared under the "nlp" extras group.
    "jellyfish>=0.9",
]

# Statistics (normality tests). pyutilz.stats is a standalone, mypy-strict-mode subpackage (see
# [[tool.mypy.overrides]] below) with its own minimal numpy-only requirement, distinct from the
# heavier pandas/system stacks. Found 2026-07-21 audit: stats/normality.py unconditionally
# imports numpy with no matching extras group of its own.
stats = [
    "numpy>=1.20",
]

# GPU acceleration (cupy). Every cupy import site in the codebase is already
# try/except-guarded (kernel_tuning device probing, gpu_dispatch.py) -- this extra
# exists purely for discoverability (`pip install pyutilz[gpu]`) rather than to make
# cupy required. Deliberately excluded from `all` (mirrors mlframe's [gpu] extra):
# cupy's cudaXX-specific wheel resolution doesn't belong in a default "everything" install.
gpu = [
    "cupy>=12.0",
]

# All optional dependencies (self-referential to avoid duplication/drift)
all = [
    "pyutilz[pandas,polars,database,web,cloud,nlp,llm,system,stats]",
]

# Development dependencies
dev = [
    # dev/benchmarking.py unconditionally imports numpy -- found 2026-07-21 audit: no extras
    # group covering the dev domain declared it (a contributor running `pip install .[dev]`
    # alone, without also `[pandas]`/`[system]`/etc., could not import this module).
    "numpy>=1.20",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-instafail>=0.5",
    "pytest-progress>=1.3",
    "pytest-timeout>=2.1",
    # black==26.5.1 requires Python >=3.10 (found 2026-07-19: installing dev-extras on the py3.8/
    # py3.9 CI matrix cells hard-failed the whole `pip install -e ".[dev]"` step, since pip can't
    # satisfy an unconditional exact pin against an interpreter the release doesn't support). The
    # marker keeps `pip install .[dev]` installable there -- those cells don't need black to run
    # pytest, matching the identical py-ci-shared marker below.
    "black==26.5.1 ; python_version >= '3.10'",   # pinned exact, matching CI's uvx black==26.5.1 (black-filtered.yml)
    "ruff==0.15.20",                # pinned exact, matching CI's uvx ruff==0.15.20 (ruff-blocking.yml) --
                                    # an open range here is exactly how mlframe's prior v0.8.6 pre-commit-
                                    # vs-CI drift went unnoticed for a long time (2026-07-18 architecture review).
    "mypy>=1.0",
    "bandit>=1.7",
    # needed by .pre-commit-config.yaml's local hooks; py-ci-shared itself requires-python >=3.9,
    # so the marker keeps `pip install .[dev]` installable on the py3.8 CI matrix cell (dev-only
    # tooling, not a runtime dependency -- py3.8 CI coverage doesn't need pre-commit hooks to work).
    "py-ci-shared @ git+https://github.com/fingoldo/py-ci-shared.git ; python_version >= '3.9'"
]

# Documentation site (MkDocs Material). Build with `mkdocs build` / serve with `mkdocs serve`.
docs = [
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/fingoldo/pyutilz"
Documentation = "https://fingoldo.github.io/pyutilz/"
Repository = "https://github.com/fingoldo/pyutilz.git"
Issues = "https://github.com/fingoldo/pyutilz/issues"
Changelog = "https://github.com/fingoldo/pyutilz/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyutilz*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
pyutilz = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -ra --timeout=120"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU (deselected in default CI; no GPU runner)",
    "live: marks tests requiring live provider API keys (skipped by default; pass --run-live to execute)"
]

# Coverage configuration
[tool.coverage.run]
source = ["src/pyutilz"]
omit = [
    "tests/*",
    "*/scheduling/*",
    "*/cloud/*",
    "*/web/browser.py",
    "*/dev/dashlib.py",
    "*/dev/notebook_init.py",
    "*/text/tokenizers.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except:",
    "if 0:",
    "if False:"
]
precision = 2
show_missing = true

# Black code formatter
[tool.black]
line-length = 160
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | build
  | dist
  | __pycache__
)/
'''

# Ruff linter. Base select/ignore (E,W,F,I,N,UP,B,DTZ,A,T20,RUF,G,ISC,PERF,C90 + the generic
# ignores) is pulled in from $PY_CI_SHARED_DIR/configs/ruff-base.toml via `extend` -- a real merge,
# not copy-paste; ruff expands env vars in `extend` paths (docs.astral.sh/ruff/settings), so
# PY_CI_SHARED_DIR just needs to point at ANY real py-ci-shared checkout, not a sibling directory
# specifically. See that repo's README "Using the shared ruff config" section for the full
# rationale. Everything below is pyutilz-specific: its own dir excludes, target-version floor
# (py38, older than mlframe's py39), and its own MEASURED mccabe threshold (complexity
# distributions differ per codebase; never copy another repo's number -- see the comment below).
[tool.ruff]
extend = "$PY_CI_SHARED_DIR/configs/ruff-base.toml"
target-version = "py38"
# _benchmarks added 2026-07-09 while wiring the blocking gate: its scripts print timing/identity
# results to stdout by design (that IS the benchmark's interface, same exemption class as
# py-ci-shared's own CLI scripts) -- T201/PERF401 findings there are noise, not bugs. Mirrors
# mlframe's benchmarks/_benchmarks/profiling exclusion (found via the identical gap there).
exclude = ["tests", "scripts", "_benchmarks", ".git", "__pycache__", "build", "dist"]

# Measured 2026-07-09 when C90 was newly added via the shared base (pyutilz had never selected
# it before): default threshold=10 flags 68 functions, median complexity among those 15, mean
# 18.8, max 61. threshold=20 keeps 17 findings -- the genuine outliers (complexity 20-61) --
# without flagging routine 10-20 dispatch/branching functions. Lower than mlframe's 40 because
# pyutilz's overall complexity distribution is genuinely lower; this is pyutilz's own measured
# number, not copied from mlframe.
[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__
"src/pyutilz/__init__.py" = ["N807"]  # module-level __getattr__ (PEP 562) is a real dunder, not a naming violation
"src/pyutilz/llm/claude_code_provider.py" = ["N814"]  # local import aliases (_TRS, _TSS) follow the project's underscore-prefixed-short-alias convention, not a "constant" naming
"src/pyutilz/dev/notebook_init.py" = ["T201"]  # entire module's job is printing interactive Jupyter-notebook-init status messages to stdout for the user to see; already excluded from coverage as a notebook-only utility
"src/pyutilz/web/proxy/decodo.py" = ["T201"]  # all findings are in DecodoProvider.print_usage(), explicitly documented as "Print human-readable subscription + traffic summary to stdout"

# Deptry: unused / missing / transitive dependency scan. Made blocking 2026-07-09 after a real
# triage pass (run with the [all,dev] extras actually installed -- deptry's DEP001/DEP002 are
# both meaningless in a bare environment, see py-ci-shared/README). 70 raw findings reduced to 0
# by [tool.deptry.package_module_name_map] (PyPI-name vs. import-name mismatches deptry can't
# infer on its own) and the per_rule_ignores below (genuinely optional third-party libs behind
# try/except ImportError guards, verified individually -- never a hard runtime requirement).
[tool.deptry]
# .claude added 2026-07-22: nested Claude Code agent worktrees live under .claude/worktrees/<name>/
# (each a full checkout with its own tests/, src/, etc.) -- deptry's file-tree scan isn't git-aware
# and was reading their duplicate source trees as part of THIS project, misattributing imports from
# worktree-local branches (transitive-dep, since-removed, or not-yet-merged) to the real project.
exclude = ["tests", "scripts", ".venv", "build", "dist", ".claude"]

[tool.deptry.package_module_name_map]
"psycopg2-binary" = "psycopg2"
beautifulsoup4 = "bs4"
"google-genai" = "google"
Pillow = "PIL"
"py-cpuinfo" = "cpuinfo"
"python-dateutil" = "dateutil"
GPUtil = "GPUtil"

[tool.deptry.per_rule_ignores]
# selenium/undetected-chromedriver/boto3/google-cloud-storage: real runtime deps, but
# imported lazily inside deeply-nested functions (see cloud/cloud.py, web/browser.py,
# performance/kernel_tuning/remote.py) -- deptry's AST usage scan misses some of these.
# pytest*/black/ruff/mypy/bandit/mkdocs-material: dev-tool CLI packages, invoked as
# commands (pytest, black, ruff, mypy, bandit, mkdocs) -- never `import`-ed by name, so
# deptry's static-usage scan can never see them as "used" no matter how the code changes.
# fake-useragent: referenced only via the dynamic `ensure_installed("... fake_useragent")`
# runtime-install helper (web/web.py) and a commented-out future `from fake_useragent
# import UserAgent`, not a static `import` deptry's scanner can detect.
DEP002 = [
    "selenium",
    "undetected-chromedriver",
    "boto3",
    "google-cloud-storage",
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-asyncio",
    "pytest-instafail",
    "pytest-progress",
    "pytest-timeout",
    "black",
    "ruff",
    "mypy",
    "bandit",
    "mkdocs-material",
    "fake-useragent",
    "py-ci-shared",  # invoked as `python -m py_ci_shared.*` CLI/pre-commit-hook commands, never `import py_ci_shared`
]

# DEP001 (import missing from declared deps): 35 findings from the 2026-07-09 full triage (run
# with [all,dev] actually installed), each individually verified to be a genuinely optional
# third-party import behind a try/except ImportError guard -- never a hard runtime requirement.
# One real bug found and fixed along the way, not ignored: core/pythonlib.py's load_file() had
# an UNGUARDED module-level `from catboost import CatBoostClassifier`, making catboost a hard
# dependency for callers loading .joblib/.pckl files too; moved to a lazy import inside the
# .bin-only branch that actually needs it (still unguarded there, since that branch always did
# require catboost -- the bug was the import's SCOPE, not the absence of a try/except).
DEP001 = [
    "catboost",  # core/pythonlib.py load_file() -- lazy-imported only for the .bin/CatBoost branch
    "IPython",  # core/pythonlib.py is_jupyter_notebook(), data/pandaslib/_common.py, dev/notebook_init.py -- notebook-only
    "nvidia",  # core/pythonlib.py -- CUDA_HOME discovery from the nvidia pip package, guarded
    "polars_ds",  # data/polarslib.py -- gated on check_cpu_flag("avx2")
    "orjson",  # database/db, llm/openai_compat.py, performance/kernel_tuning/remote.py, text/strings/jsonutils.py, web/* -- faster-than-stdlib json, falls back if missing
    "filelock",  # database/deltalakes.py -- guarded, FileLock/Timeout set to None on ImportError
    "flask_login",  # dev/dashlib.py -- guarded, Dash-only feature
    "concurrent_log_handler",  # dev/logginglib.py -- guarded, falls back to stdlib RotatingFileHandler
    "matplotlib",  # dev/notebook_init.py -- guarded, notebook-only
    "seaborn",  # dev/notebook_init.py -- guarded, notebook-only
    "claude_code_sdk",  # llm/claude_code_provider.py -- guarded SDK monkey-patch block
    "anyio",  # llm/claude_code_provider.py -- inside the same guarded claude_code_sdk block
    "botocore",  # performance/kernel_tuning/remote.py -- guarded, S3 remote-cache is opt-in
    "wmi",  # system/system/probing.py -- guarded, Windows-only
]

# DEP003 (import used but declared as transitive, not direct): same soft-import names as DEP001
# above, minus concurrent_log_handler/claude_code_sdk/wmi (which stayed genuinely absent in this
# environment). Whether deptry reports DEP001 or DEP003 for a given name depends on whether
# something else's dependency resolution happens to pull it in transitively -- not something
# this repo controls or wants to depend on staying stable, so both codes are ignored
# for the same verified-optional names rather than re-triaging every time a transitive pin shifts.
DEP003 = [
    "catboost", "IPython", "nvidia", "polars_ds", "orjson", "filelock", "matplotlib", "seaborn", "anyio", "botocore",
    "flask_login",  # dev/dashlib.py -- guarded, Dash-only feature; now pulled in transitively in some envs (previously genuinely absent)
]

# Interrogate: docstring coverage. Blocking at --fail-under=100 since 2026-07-09 (see the CI
# lint-blocking job and the .pre-commit-config.yaml interrogate-blocking hook) -- pyutilz was
# already at 100% coverage (917/917) before this config was wired up to gate on it. `_benchmarks`
# needs no explicit exclude here (unlike mlframe's) since it lives at the repo root, outside the
# `src/pyutilz` path this scan is scoped to.
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
exclude = ["tests", "scripts", "docs", "build", "dist"]
verbose = 1

# Codespell. Moved from the CI/pre-commit CLI --ignore-words-list flag into structured config
# (mirrors mlframe) so the ignore list lives in one place instead of being duplicated across
# .pre-commit-config.yaml and ci.yml. "coo" = coordinate sparse-matrix format (core/matrix.py),
# the sole confirmed false positive as of the 2026-07-05 codespell setup.
[tool.codespell]
ignore-words-list = "coo"

# MyPy type checker
[tool.mypy]
# The project's minimum RUNTIME support may still be older; this is only the syntax-checking
# target mypy 2.x type-checks against, and mypy 2.x dropped support for targets below 3.10
# (raises "Python 3.8 is not supported" otherwise -- it silently fell back and kept checking,
# but the declared target should match what mypy actually enforces).
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for now, enable gradually
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Strict-mode beachhead (mirrors mlframe's approach): two small, cohesive, stable-surface
# subpackages verified clean under strict mode as of 2026-07-06.
# - dev.code_audit (11 files): a self-contained lint/audit CLI tool, already clean with no
#   changes needed.
# - stats (2 files): numba-jitted normality tests; fixed 2 real errors in the njit-fallback
#   stub (missing annotations on the *args/**kwargs decorator pattern).
# Expansion to other subpackages should follow only after each is independently verified
# clean, same policy as mlframe.
[[tool.mypy.overrides]]
module = ["pyutilz.dev.code_audit.*", "pyutilz.stats.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
